Update Optimize multivariate linear regression.rmd

--- a/Optimize multivariate linear regression.rmd
+++ b/Optimize multivariate linear regression.rmd
@@ -32,7 +32,7 @@ return(J)
 ```{r optimization, echo=TRUE}
 optim(par = theta, fn = compCost, X = X, y = y, method = "BFGS")
 ```
-$par
+`$par
 [1]  0.04636348  0.09681103  0.10089706 -0.11856090 -0.20665898
 
 $value
@@ -46,4 +46,4 @@ $convergence
  [1] 0
 
 $message
-NULL
+NULL`
